# fastapi-strawberry

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 31b616cc0e38_initial_migration.py
app/: database.py  models.py
app/graphql/: resolvers.py  routers.py  schemas.py  types.py
app/graphql/schemas/: projects.py  tasks.py  users.py
app/graphql/types/: projects.py  tasks.py  users.py
app/models/: associations.py  projects.py  tasks.py  users.py
