[tool.poetry]
name = "fastapi-strawberry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
strawberry-graphql = "^0.247.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
databases = "^0.9.0"
bcrypt = "^4.2.0"
python-jose = "^3.3.0"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# チェックするディレクトリやファイルを指定
target-version = "py310"
line-length = 88  # Blackと統一するために88文字に設定

# 自動で修正できるルール（デフォルトでON）
lint.fixable = ["F", "E", "W", "C", "I"]

# フォーマッターとしても使用可能な設定
lint.select = ["E", "W", "F"]
